# Rosetta

./: AGENTS.md  Cargo.toml  README.md  README.pt-BR.md
.omo/: boulder.json  oh-my-openagent.jsonc
.omo/drafts/: 001-true-streaming.md  consumer-tool-calling.md
.omo/notepads/consumer-tool-calling/: learnings.md
.omo/plans/: 001-true-streaming.md  client-tool-execution-loop.md  consumer-tool-calling.md  dual-tool-routing.md
.omo/run-continuation/: ses_0b30b369bffeEsIaENagvVYbgX.json  ses_0b54adab2ffegKADlf9Kw7PLfU.json  ses_0b556d12affe6TH05M4SbWPD1x.json  ses_0b5570ff9ffeAC78CxYATljxjx.json  ses_0b559b254ffeBFOZHZ7y6XE4Vn.json  ses_0b55a0fb1ffeOPzbJ0E2AKNQfC.json  ses_0b55a3fefffeweI9uXXH6q3Krg.json  ses_0b5604afbffepUk8vcMy8l4ExO.json  ses_0b562354bffeZ0LsZvJFscTnYs.json  ses_0b5623568ffeGPfBrMzgHH9c5m.json  ses_0b568bc08ffetZ8WvEX6T4FqSz.json  ses_0b5694a8bffesb6kAH7fVWZ2KI.json  ses_0b5839110ffe4hdrrlLdAjOtsQ.json  ses_0b5af0290ffehWxomE9f3s7Aou.json  ses_0b5bd6cc1ffey67pFuCojfM19g.json  ses_0b5bfa54affemsl5QtQ1QO0oMl.json  ses_0b5c179afffev38femQ81hjaCF.json  ses_0b5c35b8dffeHnuYJF5ONvO5r5.json  ses_0b5c53b36fferd03WNq8VNsVMo.json  ses_0b5c6620affevYdvzoB92FK5fA.json  ses_0b5c7b083ffeJqhkfz4Pjya22t.json  ses_0b5ca52aaffeTpNgHC1Pr8fSA8.json  ses_0b5cbc444ffejLmKxUqbghaUbV.json  ses_0b5cce91affeSQVDYpynkKVyfE.json  ses_0b5cdf723ffeU6bauVMxsVdSj6.json  ses_0b5cffc07ffel15V2iY8B5XI7V.json  ses_0b5d3429affetbv7mQIIjbRXBH.json  ses_0b5d66092ffet5G6e5xKpnI26P.json  ses_0b5d95a80ffeUFD5hzPDbsClBc.json  ses_0b5de8b81ffePOv37ReA4tgJy7.json  ses_0b5e02296ffeyB4QoyNKSQGSD6.json  ses_0b5e12cadffeZi68egPHOvpDYj.json  ses_0b5e7af05ffetOJgKyM5DRnMyA.json  ses_0b5ebfe34ffeiv2WHRJKfpKMYV.json  ses_0b5ed4aa4ffeuXuMQq5m4NvF2d.json  ses_0b5f27e35ffenlx4PTgff3cXri.json  ses_0b5f7d0c4ffen17cMaWnJC62du.json  ses_0b5fb83beffeDi0telE8bkb3dc.json  ses_0b5fdd1e4ffer5shRaJtn7IsSZ.json  ses_0b6015a28ffeco8Pn1aYPiDFo1.json  (+141 more)
crates/rosetta-acp/: Cargo.toml
crates/rosetta-acp/src/: client.rs  lib.rs  transport.rs
crates/rosetta-acp/tests/: integration_test.rs
crates/rosetta-acp/tests/fixtures/: mock_acp.py
crates/rosetta-core/: Cargo.toml
crates/rosetta-core/src/: translate.rs
crates/rosetta-core/src/translate/: accumulator.rs  helpers.rs  mod.rs  tests.rs
crates/rosetta-server/: Cargo.toml
crates/rosetta-server/src/: cli.rs  lib.rs  main.rs  routes.rs  session_cache.rs  streaming.rs  streaming_task.rs
crates/rosetta-server/tests/: streaming_integration_test.rs
crates/rosetta-types/: Cargo.toml
crates/rosetta-types/src/: acp.rs  lib.rs  openai.rs
