[package]
name = "rosetta-acp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rosetta-types = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
