[package]
name = "rosetta-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rosetta-types = { workspace = true }
rosetta-acp = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
