[package]
name = "rosetta-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rosetta"
path = "src/main.rs"

[dependencies]
rosetta-types = { workspace = true }
rosetta-acp = { workspace = true }
rosetta-core = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
